objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Lead_Source_Details__c</fullName>
        <label>Lead Source Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <label>Lead Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the Task is related to a Lead, Lead should be specified here.</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Quote_Location__c</fullName>
        <label>Quick Quote Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm campaign</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_campaign_id__c</fullName>
        <label>utm campaign id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>utm content</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_medium__c</fullName>
        <label>utm medium</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm source</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm term</label>
        <type>TextArea</type>
    </fields>
    <description>This custom Task object is created because Standard Task object is not supported by the Console. We are going to use this Task object going forward to schedule Task for the Sales agent to followup.</description>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hold_Back_Queue_Task</fullName>
        <filterScope>Queue</filterScope>
        <label>Hold Back Queue</label>
        <queue>Hold_Back_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>